--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 .twittlerStream>div:not(.showNewTweets):nth-child(2n+1) {
 	background-color: #F5FFFF;
+	opacity: .90;
 }
 .twittlerStream>div:not(.showNewTweets):nth-child(2n) {
 	background-color: #E0F0FF;
+	opacity: .90;
 }
 body {
-	background-color: #B8E6E6;
+	background: url('http://4.bp.blogspot.com/_ZAN_S2kl6TY/SwOGLCduiKI/AAAAAAAAALA/fdtpApkfVLY/s1600/The%2BBird.png') top fixed ;
 }
 a {
 	cursor: pointer;
@@ -13,6 +15,7 @@ a {
 button {
 	border-radius: 16px;
 	margin-bottom: 20px;
+	height: 40px;
 }
 .showNewTweets {
 	text-align: center;
@@ -24,4 +27,9 @@ button {
 	border-right: 2px solid black;
 	border-radius: 15px;
 	margin-bottom: 2px;
+}
+.jumbotron {
+	border-radius: 40px;
+	background-color:#F5FFFF;
+	opacity: .5;
 }
